--- a/localization/english/fodlan_tooltips_l_english.yml
+++ b/localization/english/fodlan_tooltips_l_english.yml
@@ -5,3 +5,22 @@
  tooltip_alliance_vote_rival_friend:0 "Friend or Rival: $VALUE|=+0$"
  tooltip_alliance_leader:0 "Alliance Leader: $VALUE|=+0$"
  tooltip_councillor:0 "Council Member: $VALUE|=+0$"
+ tooltip_promoted_candidate:0 "Election campaigning: $VALUE|=+0$"
+ 
+ #Scheme tooltips
+ promotion_valid_desc:0 "The target must not be at the highest possible level of promotion/defamation. You must be any of the following: the character's liege, the character's close family, or vassal dukes within the same realm. If the target is not your close family, they must be at least a Duke."
+ start_promotion_interaction:0 "Promote in Election"
+ start_promotion_interaction_notification:0 "Promote Candidate"
+ start_defamation_interaction_notification:0 "Defame Candidate"
+ start_defamation_interaction:0 "Defame in Election"
+ scheme_interaction_promotion_approved:0 "Attempt to further [recipient.GetShortUINamePossessive] standing in the election."
+ scheme_interaction_defamation_approved:0 "Attempt to defame [recipient.GetShortUINamePossessive] character in the election."
+ defame_candidate_action:0 "Defame"
+ promote_candidate_action:0 "Promote"
+ PROMOTE_CANDIDATE_SUCCESS_DESC:0 "Target's election standing will increase, improving general opinion and influencing ongoing elections."
+ DEFAME_CANDIDATE_SUCCESS_DESC:0 "Target's election standing will decrease, lowering general opinion and influencing ongoing elections."
+ defame_candidate:0 "Defame Candidate Scheme"
+ defame_candidate_desc:0 "A non-hostile scheme that attempts to defame the target, lowering their general opinion and making any ongoing elections shift away from their favor."
+ promote_candidate:0 "Promote Candidate Scheme"
+ promote_candidate_desc:0 "A non-hostile scheme that attempts to promote the target, increasing their general opinion and making any ongoing elections shift in their favor."
+ sway_my_intrigue:0 "Your Intrigue: $VALUE|=+0$"
