call alliance to arms + other stuff

--- a/localization/english/fodlan_events_l_english.yml
+++ b/localization/english/fodlan_events_l_english.yml
@@ -3,6 +3,13 @@
  FOD_crests.002.desc:0 "My child has no crest and thus, no hope of furthering the glory of my house. Other houses will shurely start laughing at us now"
  FOD_crests.002.a:0 "Could you not be any better!?"
  
+ call_alliance:0 "Call The Alliance To Aid"
+ call_alliance_desc:0 "As we are the Leader of The Leicester Alliance, we can call our lords to war. They will join this war on their own accord and will control their own men. Yet, calling them takes a significant amount of prestige and they are never certain to join. This will depend on how well they like you."
+ call_alliance_confirm:0 "Call On The Alliance"
+ FOD_alliance.1.t:0 "The Alliance Calls For Aid"
+ FOD_alliance.1.desc:0 "[liege_desc.GetLiege.GetFirstName] has called the Alliance to arms. It seems [liege_desc.GetSheHe] thinks that the Alliance is under threat or [liege_desc.GetLiege.GetFirstName] wants to further his own interests. Nevertheless, we are not under any obligation to help, but are only expected to. We have to make our choice now."
+ FOD_alliance.1.a:0 "Ofcourse we will aid our Leader"
+ FOD_alliance.1.b:0 "[liege_desc.GetSheHe] can fight his war without my aid"
  
  ###Scheme Events###
  promotion_outcome.0001.t:0 "Words Bear Fruit"
@@ -34,6 +41,3 @@
  promotion_outcome.0014.a:0 "True winners do not ever quit. Once more, from the beginning!"
  promotion_outcome.0014.a.tt:0 "Begin the scheme again."
  promotion_outcome.0014.b:0 "One must know when to cut their losses."
- 
- 
- 
