--- a/localization/english/fodlan_tooltips_l_english.yml
+++ b/localization/english/fodlan_tooltips_l_english.yml
@@ -7,8 +7,16 @@
  tooltip_councillor:0 "Council Member: $VALUE|=+0$"
  tooltip_promoted_candidate:0 "Election campaigning: $VALUE|=+0$"
  
+ #alliance interactions
+ ALLIANCE_ACTIONS:0 "Alliance Interactions"
+ interaction_category_alliance:0 "Alliance Interactions"
+ refuse_election_interaction:0 "Retire from Election"
+ refuse_election_desc:0 "Resign as a candidate for election, ensuring you will not be elected."
+ refuse_election_interaction:0 "Unretire from Election"
+ refuse_election_desc:0 "Resume your candidacy as an election candidate, allowing you to be elected once more."
+ 
  #Scheme tooltips
- promotion_valid_desc:0 "The target must not be at the highest possible level of promotion/defamation. You must be any of the following: the character's liege, the character's close family, or vassal dukes within the same realm. If the target is not your close family, they must be at least a Duke."
+ promotion_valid_desc:0 "The target must not be at the highest possible level of promotion/defamation, nor disinherited, nor a child. You must be any of the following: the character's liege, the character's close family, or vassal dukes within the same realm. If the target is not your close family, they must be at least a Duke."
  start_promotion_interaction:0 "Promote in Election"
  start_promotion_interaction_notification:0 "Promote Candidate"
  start_defamation_interaction_notification:0 "Defame Candidate"
@@ -24,3 +32,6 @@
  promote_candidate:0 "Promote Candidate Scheme"
  promote_candidate_desc:0 "A non-hostile scheme that attempts to promote the target, increasing their general opinion and making any ongoing elections shift in their favor."
  sway_my_intrigue:0 "Your Intrigue: $VALUE|=+0$"
+ 
+ #deaths
+ true_knight:0 "Died like a true knight"
