alliance interaction category, retire instead of defame self

--- a/localization/english/fodlan_events_l_english.yml
+++ b/localization/english/fodlan_events_l_english.yml
@@ -53,3 +53,9 @@
  promotion_outcome.0020.t:0 "Opportunity Slips Away"
  promotion_outcome.0020.desc:0 "Despite my best efforts to make sure the election occured how I wished it to, it appears [target.GetName] is out of my reach to influence. It was some wasted effort, but perhaps the desired result was reached in the end..."
  promotion_outcome.0020.a:0 "A waste of time."
+ promotion_outcome.0040.t:0 "Retirement"
+ promotion_outcome.0040.desc:0 "Of late, the election tires me. I have been making some vague efforts to promote myself as a candidate, but I have come to realize that I do not desire the position at all. It was a difficult decision to make, but I announced to the electors that I would no longer be participating in the election. Some expressed concern, but most of the others simply had a degree of glee on their face. \n\nSeeing that was confirmation my choice was the right one."
+ promotion_outcome.0040.a:0 "Free at last, free at last!"
+ promotion_outcome.0041.t:0 "Restless Mind"
+ promotion_outcome.0041.desc:0 "These days, I have been questioning my decision to step away from the election. I thought it might be a momentary longing for something that never truly existed. I tried my best to recall all the dreadful parts of campaigning. Nonetheless, none of my methods assuaged my wants, and I find myself wishing to return to the political arena once more. \n\nSo I did precisely that. It is my time to rise, I think."
+ promotion_outcome.0041.a:0 "How I missed this."
