--- a/localization/english/fodlan_events_l_english.yml
+++ b/localization/english/fodlan_events_l_english.yml
@@ -19,6 +19,25 @@
  FOD_alliance.2.a:0 "This arrangement will benefit us both."
  FOD_alliance.2.b:0 "Perfect."
  FOD_alliance.2.c:0 "I am not interested"
+ FOD_alliance.3.t:0 "Alliance Debate - Diplomacy"
+ FOD_alliance.3.desc:0 "We had a fiery debate about matters of diplomacy today on the Alliance's round table. [first_lord.GetName] and [second_lord.GetName] have totally different views on the subject. As Leader, it's time I put my fist down and end this."
+ FOD_alliance.4.t:0 "Alliance Debate - Martial"
+ FOD_alliance.4.desc:0 "We had a fiery debate about matters of war today on the Alliance's round table. [first_lord.GetName] and [second_lord.GetName] have totally different views on the subject. As Leader, it's time I put my fist down and end this."
+ FOD_alliance.5.t:0 "Alliance Debate - Stewardship"
+ FOD_alliance.5.desc:0 "We had a fiery debate about matters of economics today on the Alliance's round table. [first_lord.GetName] and [second_lord.GetName] have totally different views on the subject. As Leader, it's time I put my fist down and end this."
+ FOD_alliance.debate.a:0 "[first_lord.GetName] makes the better case."
+ FOD_alliance.debate.b:0 "[second_lord.GetName] makes the better case."
+ FOD_alliance.debate.c:0 "I will push my own stance."
+ FOD_alliance.debate.success:0 "I impress them with my reasoning."
+ FOD_alliance.debate.failure:0 "I make a fool of myself."
+ good_diplomacy_debate_modifier:0 "Good Diplomatic Policy"
+ bad_diplomacy_debate_modifier:0 "Poor Diplomatic Policy"
+ good_martial_debate_modifier:0 "Good War Policy"
+ bad_martial_debate_modifier:0 "Poor War Policy"
+ good_stewardship_debate_modifier:0 "Good Economic Policy"
+ bad_stewardship_debate_modifier:0 "Poor Economic Policy"
+ debate_impressed_opinion:0 "Impressed at Alliance Debate"
+ debate_unimpressed_opinion:0 "Unimpressed at Alliance Debate"
  
  ###Scheme Events###
  promotion_outcome.0001.t:0 "Words Bear Fruit"
