Yet another set of changes to Alliance debate events

--- a/localization/english/fodlan_events_l_english.yml
+++ b/localization/english/fodlan_events_l_english.yml
@@ -20,16 +20,20 @@
  FOD_alliance.2.b:0 "Perfect."
  FOD_alliance.2.c:0 "The offer does not appeal to me."
  FOD_alliance.3.t:0 "Alliance Debate - Diplomacy"
- FOD_alliance.3.desc:0 "We had a fiery debate about matters of diplomacy today on the Alliance's round table. [first_lord.GetName] and [second_lord.GetName] have totally different views on the subject. While [better_diplomacy_lord.GetName] is obviously the better choice in the matter, I can still choose to support the other one to gain some relation with him. As Leader, it's time I put my fist down and end this."
+ FOD_alliance.3.desc:0 "We had a fiery debate about matters of diplomacy today on the Alliance's round table. [first_lord.GetName] and [second_lord.GetName] have totally different views on the subject. While [better_diplomacy_lord.GetName] is obviously the better choice in the matter, I can still choose to support the other one to improve relations. As Leader, it's time I put my fist down and end this."
  FOD_alliance.4.t:0 "Alliance Debate - Martial"
- FOD_alliance.4.desc:0 "We had a fiery debate about matters of war today on the Alliance's round table. [first_lord.GetName] and [second_lord.GetName] have totally different views on the subject. As Leader, it's time I put my fist down and end this."
+ FOD_alliance.4.desc:0 "We had a fiery debate about matters of war today on the Alliance's round table. [first_lord.GetName] and [second_lord.GetName] have totally different views on the subject. While [better_martial_lord.GetName] is obviously the better choice in the matter, I can still choose to support the other one to improve relations. As Leader, it's time I put my fist down and end this."
  FOD_alliance.5.t:0 "Alliance Debate - Stewardship"
- FOD_alliance.5.desc:0 "We had a fiery debate about matters of economics today on the Alliance's round table. [first_lord.GetName] and [second_lord.GetName] have totally different views on the subject. As Leader, it's time I put my fist down and end this."
- FOD_alliance.debate.a:0 "[first_lord.GetName] makes the better case."
- FOD_alliance.debate.b:0 "[second_lord.GetName] makes the better case."
- FOD_alliance.debate.c:0 "I will push my own stance."
- FOD_alliance.debate.success:0 "I impress them with my reasoning."
- FOD_alliance.debate.failure:0 "I make a fool of myself."
+ FOD_alliance.5.desc:0 "We had a fiery debate about matters of economics today on the Alliance's round table. [first_lord.GetName] and [second_lord.GetName] have totally different views on the subject. While [better_stewardship_lord.GetName] is obviously the better choice in the matter, I can still choose to support the other one to improve relations. As Leader, it's time I put my fist down and end this."
+ FOD_alliance.debate.a:0 "Support [first_lord.GetName]."
+ FOD_alliance.debate.b:0 "Support [second_lord.GetName]."
+ FOD_alliance.debate.c:0 "Push my own stance."
+ FOD_alliance.debate.a.success:0 "[first_lord.GetName] was right."
+ FOD_alliance.debate.a.failure:0 "[first_lord.GetName] was wrong."
+ FOD_alliance.debate.b.success:0 "[second_lord.GetName] was right."
+ FOD_alliance.debate.b.failure:0 "[second_lord.GetName] was wrong."
+ FOD_alliance.debate.c.success:0 "I impress them with my reasoning."
+ FOD_alliance.debate.c.failure:0 "I make a fool of myself."
  good_diplomacy_debate_modifier:0 "Good Diplomatic Policy"
  bad_diplomacy_debate_modifier:0 "Poor Diplomatic Policy"
  good_martial_debate_modifier:0 "Good War Policy"
