tonight's weather hints at a sprinkle of localization

--- a/localization/english/fodlan_leicester_l_english.yml
+++ b/localization/english/fodlan_leicester_l_english.yml
@@ -18,7 +18,7 @@
  FOD_alliance.1.t:0 "The Alliance Calls For Aid"
  FOD_alliance.1.desc:0 "These are desperate times indeed; [liege_desc.GetLiege.GetFirstName] has called the Alliance to arms. Whether the Alliance truly faces an unprecedented threat or [liege_desc.GetLiege.GetFirstName] simply intends to further [liege_desc.GetLiege.GetHerHis] own ambitions, the fact stands that the Alliance will be plunged into turmoil. \n\nRegardless, [liege_desc.GetLiege.GetFirstName] is only the leader of the Alliance, not our overlord, and we do not need to answer the call if we do not wish to. War is not a decision to be made lightly. What shall be done?"
  FOD_alliance.1.a:0 "Gather our banners. We ride!"
- FOD_alliance.1.b:0 "I need not fight in my liege's self-serving war."
+ FOD_alliance.1.b:0 "I see no need to get involved..."
  FOD_alliance.2.t:0 "Great Lord's Offer"
  FOD_alliance.2.desc.opening:0 "The politics of the Alliance are a complex and fluctuating beast that change just as the tides that beat against Derdriu. One fact remains uncontested, though; one needs support to succeed in the election. \n\n[great_lord.GetName] cannot be ignorant of this fact, for [great_lord.GetSheHe] approached me with an offer. [great_lord.GetName] will support me in the election for a time."
  FOD_alliance.2.desc.hook:0 "\nAll they seek in return in for me to forget about the leverage I already hold over them."
@@ -27,11 +27,11 @@
  FOD_alliance.2.b:0 "Perfect."
  FOD_alliance.2.c:0 "The offer does not appeal to me."
  FOD_alliance.3.t:0 "Alliance Debate - Diplomacy"
- FOD_alliance.3.desc:0 "We had a fiery debate about matters of diplomacy today on the Alliance's round table. [first_lord.GetName] and [second_lord.GetName] have totally different views on the subject. While [better_diplomacy_lord.GetName] is obviously the better choice in the matter, I can still choose to support the other one to improve relations. As Leader, it's time I put my fist down and end this."
+ FOD_alliance.3.desc:0 "A discussion of matters regarding the diplomatic policy of the Alliance has evolved into a full-fledged debate. [first_lord.GetName] and [second_lord.GetName] are the two primary proponents of their respective arguments.  \n\n[better_diplomacy_lord.GetName] has been presenting the most sensible arguments thus far, and moreover, [better_diplomacy_lord.GetHerHis] ideas can ostensibly be put into practice. I have maintained a stance of impartiality, yet now it is my duty as Leader to settle this matter."
  FOD_alliance.4.t:0 "Alliance Debate - Martial"
- FOD_alliance.4.desc:0 "We had a fiery debate about matters of war today on the Alliance's round table. [first_lord.GetName] and [second_lord.GetName] have totally different views on the subject. While [better_martial_lord.GetName] is obviously the better choice in the matter, I can still choose to support the other one to improve relations. As Leader, it's time I put my fist down and end this."
+ FOD_alliance.4.desc:0 "A discussion of matters regarding the military policy of the Alliance has evolved into a full-fledged debate. [first_lord.GetName] and [second_lord.GetName] are the two primary proponents of their respective arguments.  \n\n[better_martial_lord.GetName] has been presenting the most sensible arguments thus far, and moreover, [better_martial_lord.GetHerHis] ideas can ostensibly be put into practice. I have maintained a stance of impartiality, yet now it is my duty as Leader to settle this matter."
  FOD_alliance.5.t:0 "Alliance Debate - Stewardship"
- FOD_alliance.5.desc:0 "We had a fiery debate about matters of economics today on the Alliance's round table. [first_lord.GetName] and [second_lord.GetName] have totally different views on the subject. While [better_stewardship_lord.GetName] is obviously the better choice in the matter, I can still choose to support the other one to improve relations. As Leader, it's time I put my fist down and end this."
+ FOD_alliance.5.desc:0 "A discussion of matters regarding the economic future of the Alliance has evolved into a full-fledged debate. [first_lord.GetName] and [second_lord.GetName] are the two primary proponents of their respective arguments.  \n\n[better_stewardship_lord.GetName] has been presenting the most sensible arguments thus far, and moreover, [better_stewardship_lord.GetHerHis] ideas can ostensibly be put into practice. I have maintained a stance of impartiality, yet now it is my duty as Leader to settle this matter."
  FOD_alliance.debate.a:0 "Support [first_lord.GetName]."
  FOD_alliance.debate.b:0 "Support [second_lord.GetName]."
  FOD_alliance.debate.c:0 "Push my own stance."
@@ -50,12 +50,12 @@
  debate_impressed_opinion:0 "Impressed at Alliance Debate"
  debate_unimpressed_opinion:0 "Unimpressed at Alliance Debate"
  FOD_alliance.6.t:0 "Extra Development Funds"
- FOD_alliance.6.desc:0 "The Alliance budget contains some funds for investing in infrastructure. Each great lord now suggests that their territory should receive the masons and engineers. We can also invest in our own territory or aid a lesser noble. Who do I choose?"
- FOD_alliance.6.a:0 "Myself."
- FOD_alliance.6.b:0 "[first_lord.GetName]."
- FOD_alliance.6.c:0 "[second_lord.GetName]."
- FOD_alliance.6.d:0 "[third_lord.GetName]."
- FOD_alliance.6.e:0 "[fourth_lord.GetName]."
- FOD_alliance.6.f:0 "[other_noble.GetName]."
+ FOD_alliance.6.desc:0 "A recent windfall has graced the Alliance-- namely, a sizable donation from a wealthy merchant who wished to see Alliance land developed. The Alliance Roundtable agrees the money would best be spent on masons, carpenters, and other such skilled artisans. Each great lord predictably proposes their own territory receive this aid. Some suggest a lesser noble might receive the aid, or even my own territory. The choices fall on me."
+ FOD_alliance.6.a:0 "The Leader knows what is best for the Alliance."
+ FOD_alliance.6.b:0 "[first_lord.GetName] needs aid."
+ FOD_alliance.6.c:0 "[second_lord.GetName] has always been a staunch ally."
+ FOD_alliance.6.d:0 "[third_lord.GetName] stands to help the Alliance."
+ FOD_alliance.6.e:0 "[fourth_lord.GetName] would not forget this favor."
+ FOD_alliance.6.f:0 "[other_noble.GetName] might help balance the power dynamic."
  selfish_liege_modifier:0 "Selfish Investment"
  chosen_vassal_opinion:0 "Chosen For Investment"
