--- a/localization/english/fodlan_leicester_l_english.yml
+++ b/localization/english/fodlan_leicester_l_english.yml
@@ -59,3 +59,7 @@
  FOD_alliance.6.f:0 "[other_noble.GetName] might help balance the power dynamic."
  selfish_liege_modifier:0 "Selfish Investment"
  chosen_vassal_opinion:0 "Chosen For Investment"
+  FOD_alliance.7.t:0 "Accusations at the table"
+ FOD_alliance.7.desc:0 "During the current session of the Alliance Roundtable, [first_lord.GetName] openly discredited my choice for the next ruler of the alliance. Saying [root_choice.GetFirstName] is undeserving of such a position, and his choice [first_lord_choice.GetFirstName] would be a much better choice to lead the alliance."
+ FOD_alliance.7.a:0 "I wont stand for this, discredit them instead."
+ FOD_alliance.7.b:0 "try to smooth over the situation."
